test/sema/mutable-parameter-type.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:22: error: parameter types cannot be 'mutable'
void foo(mutable int i) { }
